--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.5.1",
     "nodemon": "^2.0.19"
   }
 }
