--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "import:data": "nodemon seeder.js",
-    "destroy:data" : "nodemon seeder.js -d"
+    "destroy:data": "nodemon seeder.js -d"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19"
   }
