--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19"
   }
