--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
 }
